--- a/apps/momo/src/app/app.component.html
+++ b/apps/momo/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<header>
+    <nav>
+        <a routerLink="/">Главная</a>
+        <a routerLink="/ola">ОЛА</a>
+        <a routerLink="/triggers">ТРИГГЕРЫ</a>
+        <a routerLink="/ssp">ССП</a>
+    </nav>
+</header>
+<router-outlet></router-outlet>
